chore: rename publish run to "website"
"storybook" is a copy from another project.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,8 @@ on:
     - main
 
 jobs:
-  storybook:
-    name: Publish storybook
+  website:
+    name: Publish website
     runs-on: ubuntu-latest
 
     steps:
