--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Patric Stout <eveshipfit@truebrain.nl>",
   "license": "MIT",
   "dependencies": {
-    "@eveshipfit/react": "^1.2.0",
+    "@eveshipfit/react": "^1.3.0",
+    "@eveshipfit/dogma-engine": "^2.2.0",
     "next": "14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
