--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "Patric Stout <eveshipfit@truebrain.nl>",
   "license": "MIT",
   "dependencies": {
-    "@eveshipfit/react": "^1.7.0",
     "@eveshipfit/dogma-engine": "^2.2.1",
+    "@eveshipfit/react": "^1.8.0",
+    "clsx": "^2.0.0",
     "next": "14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -32,10 +33,10 @@
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-config-next": "14.0.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
