--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "@eveshipfit/data": "^9.2.20240227",
     "@eveshipfit/dogma-engine": "^3.2.2",
-    "@eveshipfit/react": "^2.5.0",
+    "@eveshipfit/react": "^2.5.1",
     "clsx": "^2.1.1",
-    "next": "14.0.1",
+    "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
